# kanji-srs

./: Cargo.toml  radkfile_utf8
crates/core/: Cargo.toml
crates/core/src/: kanji.rs  repo.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: lib.rs
crates/server/: Cargo.toml
migrations/: 0001_init.sql
src/: main.rs
src/core/: kanji.rs  mod.rs  repo.rs
