[package]
name = "kanji-srs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
pglite-oxide = "0.5.1"
quick-xml = "0.41.0"
sqlx = { version = "0.9", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
tokio = { version = "1.52.4", features = ["full"] }
